--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -403,25 +403,23 @@
 
         <!-- Placeholder for your name -->
         <h1>Angelie Ashley Lopez</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <p class="description">IT Student♥</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>Experiences:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>DICT Region III - Regional Pitching Competition (5th Runner up)</li>
+                <li>AppCon 2023, Otis Philippines - Project Manager</li>
+                <li>Subic Bay Metropolitan Authority, Office Services Department - Internship</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Educational Background:</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>Little Angel Study Center - 2014</li>
+                <li>Asia Pacific College of Advanced Studies, Inc. - 2020</li>
+                <li>Asia Pacific College of Advanced Studies, Inc. - 2025</li>
             </ul>
         </div>
 
