--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -417,9 +417,9 @@
 
             <h3>Educational Background:</h3>
             <ul>
-                <li>Little Angel Study Center - 2014</li>
-                <li>Asia Pacific College of Advanced Studies, Inc. - 2020</li>
-                <li>Asia Pacific College of Advanced Studies, Inc. - 2025</li>
+                <li>Little Angel Study Center - 2014 (Elementary)</li>
+                <li>Asia Pacific College of Advanced Studies, Inc. - 2020 (Senior High School)</li>
+                <li>Asia Pacific College of Advanced Studies, Inc. - in progress (College)</li>
             </ul>
         </div>
 
